# reposerver/repository/repository.go
@@ -54,7 +54,7 @@ type Service struct {
 	parallelismLimitSemaphore *semaphore.Weighted
 	metricsServer             *metrics.MetricsServer
 	newGitClient              func(rawRepoURL string, creds git.Creds, insecure bool, enableLfs bool) (git.Client, error)
-	newHelmClient             func(repoURL string, creds helm.Creds) helm.Client
+	newHelmClient             func(repoURL string, creds helm.Creds, repoType string) helm.Client
 }
 
 // NewService returns a new instance of the Manifest service
@@ -70,8 +70,8 @@ func NewService(metricsServer *metrics.MetricsServer, cache *reposervercache.Cac
 		cache:                     cache,
 		metricsServer:             metricsServer,
 		newGitClient:              git.NewClient,
-		newHelmClient: func(repoURL string, creds helm.Creds) helm.Client {
-			return helm.NewClientWithLock(repoURL, creds, repoLock)
+		newHelmClient: func(repoURL string, creds helm.Creds, repoType string) helm.Client {
+			return helm.NewClientWithLock(repoURL, creds, repoLock, repoType)
 		},
 	}
 }
@@ -163,12 +163,12 @@ func (s *Service) runRepoOperation(
 			return err
 		}
 		if settings.noCache {
-			err = helmClient.CleanChartCache(source.Chart, version)
+			err = helmClient.CleanChartCache(source.RepoNamespace, source.Chart, version)
 			if err != nil {
 				return err
 			}
 		}
-		chartPath, closer, err := helmClient.ExtractChart(source.Chart, version)
+		chartPath, closer, err := helmClient.ExtractChart(source.RepoNamespace, source.Chart, version)
 		if err != nil {
 			return err
 		}
@@ -746,6 +746,7 @@ func (s *Service) GetAppDetails(ctx context.Context, q *apiclient.RepoServerAppD
 					res.Helm.ValueFiles = append(res.Helm.ValueFiles, fName)
 				}
 			}
+
 			h, err := helm.NewHelmApp(appPath, getHelmRepos(q.Repos), false)
 			if err != nil {
 				return err
@@ -902,7 +903,7 @@ func (s *Service) newClientResolveRevision(repo *v1alpha1.Repository, revision s
 }
 
 func (s *Service) newHelmClientResolveRevision(repo *v1alpha1.Repository, revision string, chart string) (helm.Client, string, error) {
-	helmClient := s.newHelmClient(repo.Repo, repo.GetHelmCreds())
+	helmClient := s.newHelmClient(repo.Repo, repo.GetHelmCreds(), repo.Type)
 	if helm.IsVersion(revision) {
 		return helmClient, revision, nil
 	}
@@ -949,7 +950,7 @@ func checkoutRevision(gitClient git.Client, commitSHA string, logEntry *log.Entr
 }
 
 func (s *Service) GetHelmCharts(ctx context.Context, q *apiclient.HelmChartsRequest) (*apiclient.HelmChartsResponse, error) {
-	index, err := s.newHelmClient(q.Repo.Repo, q.Repo.GetHelmCreds()).GetIndex()
+	index, err := s.newHelmClient(q.Repo.Repo, q.Repo.GetHelmCreds(), q.Repo.Type).GetIndex()
 	if err != nil {
 		return nil, err
 	}
